--- a/app/src/main/res/layout/fragment__saved.xml
+++ b/app/src/main/res/layout/fragment__saved.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.saved.Fragment_Saved">
+    tools:context=".saved.Fragment_Saved">
 
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/savedTabLayout"
