--- a/app/src/main/res/layout/fragment_select_chapter.xml
+++ b/app/src/main/res/layout/fragment_select_chapter.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.home.selectChapter.fragmentSelectChapter">
+    tools:context=".home.SelectChapter.fragmentSelectChapter">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/SelectChapter_RV"
@@ -13,6 +13,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/chapter_view" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
