--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -1,16 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/home_bottomNav"
+        android:id="@+id/chooseSubject"
         android:icon="@drawable/ic_home"
         android:title="Home" />
     <item
-        android:id="@+id/saved_bottomNav"
+        android:id="@+id/fragment_Saved3"
         android:icon="@drawable/ic_saved"
         android:title="Saved" />
     <item
-        android:id="@+id/more_bottomNav"
+        android:id="@+id/fragment_more"
         android:icon="@drawable/ic_more"
         android:title="More" />
 </menu>
