--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,9 +7,9 @@
 
     <fragment
         android:id="@+id/chooseSubject"
-        android:name="com.hz_apps.matricintermcqs.home.SelectBook.ChooseSubject"
+        android:name="com.hz_apps.matricintermcqs.home.HomeMain.HomeMainFragment"
         android:label="fragment_choose_subject"
-        tools:layout="@layout/fragment_choose_subject" >
+        tools:layout="@layout/fragment_home_main" >
         <action
             android:id="@+id/action_chooseSubject_to_fragmentSelectChapter"
             app:destination="@id/fragmentSelectChapter"
@@ -25,12 +25,13 @@
         android:label="fragment_select_chapter"
         tools:layout="@layout/fragment_select_chapter" />
     <fragment
-        android:id="@+id/fragment_Saved"
+        android:id="@+id/fragment_Saved3"
         android:name="com.hz_apps.matricintermcqs.saved.Fragment_Saved"
-        android:label="fragment_more"
-        tools:layout="@layout/fragment_more" />
+        android:label="fragment__saved"
+        tools:layout="@layout/fragment__saved" />
     <fragment
         android:id="@+id/fragment_more"
         android:name="com.hz_apps.matricintermcqs.more.Fragment_more"
-        android:label="Fragment_more" />
+        android:label="fragment__saved"
+        tools:layout="@layout/fragment_more" />
 </navigation>
