--- a/app/src/main/res/layout/fragment_select_chapter.xml
+++ b/app/src/main/res/layout/fragment_select_chapter.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".home.SelectChapter.fragmentSelectChapter">
+    tools:context=".home.SelectChapter.FragmentSelectChapter">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/SelectChapter_RV"
