--- a/app/src/main/res/menu/bottom_navigation.xml
+++ b/app/src/main/res/menu/bottom_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/chooseSubject"
+        android:id="@+id/HomeMain"
         android:icon="@drawable/ic_home"
         android:title="Home" />
     <item
