--- a/app/src/main/res/drawable/correct_mcqs_option.xml
+++ b/app/src/main/res/drawable/correct_mcqs_option.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/design_default_color_primary"
+    <stroke android:color="@color/green"
         android:width="1dp" />
-    <solid android:color="#D5ECFF"/>
+    <solid android:color="#D8FFD5"/>
     <corners android:radius="5dp"/>
 </shape>
