--- a/app/src/main/res/layout/activity_mcqs.xml
+++ b/app/src/main/res/layout/activity_mcqs.xml
@@ -10,9 +10,9 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="16dp"
-        android:background="@drawable/mcqs_statement"
+        android:background="@drawable/unselected_option"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
@@ -50,17 +50,17 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/unselected_option"
+                android:foreground="?attr/selectableItemBackground"
                 android:paddingStart="5dp"
-                android:paddingTop="8dp"
+                android:paddingTop="10dp"
                 android:paddingEnd="5dp"
-                android:paddingBottom="8dp"
+                android:paddingBottom="10dp"
                 android:text="Option 1"
                 android:textAlignment="center"
                 android:textSize="18sp"
-                android:foreground="?attr/selectableItemBackground"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -71,17 +71,17 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/unselected_option"
+                android:foreground="?attr/selectableItemBackground"
                 android:paddingStart="5dp"
-                android:paddingTop="8dp"
+                android:paddingTop="10dp"
                 android:paddingEnd="5dp"
-                android:paddingBottom="8dp"
+                android:paddingBottom="10dp"
                 android:text="Option 3"
                 android:textAlignment="center"
                 android:textSize="18sp"
-                android:foreground="?attr/selectableItemBackground"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -92,17 +92,17 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/unselected_option"
+                android:foreground="?attr/selectableItemBackground"
                 android:paddingStart="5dp"
-                android:paddingTop="8dp"
+                android:paddingTop="10dp"
                 android:paddingEnd="5dp"
-                android:paddingBottom="8dp"
+                android:paddingBottom="10dp"
                 android:text="Option 2"
                 android:textAlignment="center"
                 android:textSize="18sp"
-                android:foreground="?attr/selectableItemBackground"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -113,17 +113,17 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:layout_marginTop="24dp"
+                android:layout_marginTop="20dp"
                 android:layout_marginEnd="16dp"
                 android:background="@drawable/unselected_option"
+                android:foreground="?attr/selectableItemBackground"
                 android:paddingStart="5dp"
-                android:paddingTop="8dp"
+                android:paddingTop="10dp"
                 android:paddingEnd="5dp"
-                android:paddingBottom="8dp"
+                android:paddingBottom="10dp"
                 android:text="Option 4"
                 android:textAlignment="center"
                 android:textSize="18sp"
-                android:foreground="?attr/selectableItemBackground"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -134,7 +134,7 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar2"
-        android:layout_width="409dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="?attr/colorPrimary"
         android:minHeight="?attr/actionBarSize"
