--- a/app/src/main/res/drawable/mcqs_statement.xml
+++ b/app/src/main/res/drawable/mcqs_statement.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#B4D4ED"
-        android:endColor="#BCDBF4"/>
+    <gradient android:startColor="#D3E8FA"
+        android:endColor="#E2EFFA"/>
     <corners android:radius="5dp"/>
     <stroke android:color="#656565"
         android:width="2dp"/>
