--- a/app/src/main/res/layout/subject_view.xml
+++ b/app/src/main/res/layout/subject_view.xml
@@ -11,6 +11,8 @@
     <androidx.cardview.widget.CardView
         android:layout_width="150dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
         app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
