--- a/app/src/main/res/layout/fragment_test_setup.xml
+++ b/app/src/main/res/layout/fragment_test_setup.xml
@@ -6,14 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".Home.TestSetup.TestSetupFragment">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="250dp"
-        android:layout_height="60dp"
-        android:layout_marginBottom="16dp"
-        android:text="Start Test"
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/test_view" />
 </androidx.constraintlayout.widget.ConstraintLayout>
