exit dialog added

--- a/app/src/main/res/layout/fragment_test_setup.xml
+++ b/app/src/main/res/layout/fragment_test_setup.xml
@@ -7,11 +7,13 @@
     tools:context=".Home.TestSetup.TestSetupFragment">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerView_test_setup"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/test_view" />
