--- a/app/src/main/res/layout/fragment_select_chapter.xml
+++ b/app/src/main/res/layout/fragment_select_chapter.xml
@@ -16,4 +16,14 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/chapter_view" />
 
+    <ProgressBar
+        android:id="@+id/progressBar_select_chapter"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
