saved test view updated

--- a/app/src/main/res/layout/fragment_saved_test.xml
+++ b/app/src/main/res/layout/fragment_saved_test.xml
@@ -10,6 +10,7 @@
         android:id="@+id/recyclerView_saved_test"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
@@ -17,23 +18,23 @@
         app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/saved_test_view" />
 
-    <TextView
-        android:id="@+id/no_saved_test_TView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="You have not saved any test"
-        android:textSize="24sp"
-        android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <ProgressBar
         android:id="@+id/progressBar_saved_test"
         style="?android:attr/progressBarStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/no_saved_test"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="No Saved Test"
+        android:textSize="24sp"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
