--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -40,8 +40,12 @@
             app:popEnterAnim="@anim/slide_left_to_right_enter"
             app:popExitAnim="@anim/slide_left_to_right_exit"/>
         <action
-            android:id="@+id/action_fragmentSelectChapter_to_createTestFragment"
-            app:destination="@id/createTestFragment" />
+            android:id="@+id/action_fragmentSelectChapter_to_createOwnTestFragment"
+            app:destination="@id/createOwnTestFragment"
+            app:enterAnim="@anim/slide_right_to_left_enter"
+            app:exitAnim="@anim/slide_right_to_left_exit"
+            app:popEnterAnim="@anim/slide_left_to_right_enter"
+            app:popExitAnim="@anim/slide_left_to_right_exit"/>
     </fragment>
     <fragment
         android:id="@+id/fragment_Saved"
@@ -73,9 +77,8 @@
             />
     </fragment>
     <fragment
-        android:id="@+id/createTestFragment"
-        android:name="com.hz_apps.matricintermcqs.Home.SelectChapter.CreateOwnTest.CreateTestFragment"
-        android:label="fragment_create_test"
-        tools:layout="@layout/fragment_create_test" >
-    </fragment>
+        android:id="@+id/createOwnTestFragment"
+        android:name="com.hz_apps.matricintermcqs.Home.CreateCustomTest.CreateOwnTestFragment"
+        android:label="Create Test"
+        tools:layout="@layout/fragment_create_own_test" />
 </navigation>
