--- a/app/src/main/res/layout/activity_mcqs.xml
+++ b/app/src/main/res/layout/activity_mcqs.xml
@@ -154,6 +154,17 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/ic_next" />
 
+    <Button
+        android:id="@+id/finishBtn_mcqs_activity"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="32dp"
+        android:text="Finish"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
     <ImageView
         android:id="@+id/backBtn"
         android:layout_width="44dp"
