--- a/app/src/main/res/drawable/class_selected.xml
+++ b/app/src/main/res/drawable/class_selected.xml
@@ -3,5 +3,5 @@
     <corners android:radius="10dp"/>
     <solid android:color="@color/purple_500"/>
     <stroke android:width="1dp"
-        android:color="@color/purple_500"/>
+        android:color="?attr/colorPrimary"/>
 </shape>
