--- a/app/src/main/res/layout/fragment_home_main.xml
+++ b/app/src/main/res/layout/fragment_home_main.xml
@@ -47,7 +47,7 @@
         android:foreground="?attr/selectableItemBackground"
         android:gravity="center"
         android:text="9"
-        android:textColor="@color/black"
+        android:textColor="?attr/colorOnSecondary"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toStartOf="@+id/class10_TVi"
@@ -66,7 +66,7 @@
         android:foreground="?attr/selectableItemBackground"
         android:gravity="center"
         android:text="10"
-        android:textColor="@color/black"
+        android:textColor="?attr/colorOnSecondary"
         android:textSize="30sp"
         android:textStyle="bold"
         app:layout_constraintBaseline_toBaselineOf="@+id/class9_TVi"
