--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,5 +15,5 @@
     <color name="light_green">#00C808</color>
     <color name="light_red">#FF1100</color>
 
-    <color name="testing_color">#6C6C6C</color>
+    <color name="dark_grey">#424242</color>
 </resources>
